DownloadWatchDog: fixed wrong if condition to cause 100% cpu loop
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@20763 ebf7c1c2-ba36-0410-9fe8-c592906822b4